force-app/main/default/objects/Bike_Quote_Item__c/Bike_Quote_Item__c.object-meta.xml
<CustomObject>
    <label>Bike Quote Item</label>
    <nameField>
        <label>Bike Quote Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bike Quote Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>