force-app/main/default/objects/Bike_Quote_Item__c/fields/Bike__c.field-meta.xml
<CustomField>
    <fullName>Bike__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bike</label>
    <referenceTo>Bike__c</referenceTo>
    <relationshipLabel>Bike Quote Items</relationshipLabel>
    <relationshipName>Bike_Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>