force-app/main/default/objects/Bike_Quote_Item__c/fields/Bike_Quote__c.field-meta.xml
<CustomField>
    <fullName>Bike_Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bike Quote</label>
    <referenceTo>Bike_Quote__c</referenceTo>
    <relationshipLabel>Bike Quote Items</relationshipLabel>
    <relationshipName>Bike_Quote_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>