force-app/main/default/objects/Bike_Quote_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>Bike_Quote__c</columns>
    <columns>Bike__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Subtotal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>